--- a/Resampling_Datetime_Data.ipynb
+++ b/Resampling_Datetime_Data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "bb8d9278",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "c4b9e787",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4      -1.4            0.0  102250.0         1.0  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "52f5a383",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "4      -1.4            0.0  102250.0         1.0 1979-01-05  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "de7ef5d7",
    "metadata": {},
    "outputs": [
@@ -584,7 +584,7 @@
        "[15341 rows x 10 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "ba3fa21b",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
        "[7671 rows x 5 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "177eeac8",
    "metadata": {},
    "outputs": [
@@ -797,7 +797,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "0a5a38f0",
    "metadata": {},
    "outputs": [
@@ -922,7 +922,7 @@
        "max        51.600000    29.000000    22.300000    37.900000    12.000000"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "6dfe6837",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "2e0e0090",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "60d3e454",
    "metadata": {},
    "outputs": [],
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "229f13aa",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "f7924ede",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "a4cbfca9",
    "metadata": {},
    "outputs": [
@@ -1074,7 +1074,7 @@
        "              dtype='datetime64[ns]', name='datetime', length=4018, freq=None)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "85ab8920",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
        "Freq: MS, Name: Resampled, Length: 132, dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "a0ff741a",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "fb5cbe67",
    "metadata": {},
    "outputs": [],
@@ -1160,17 +1160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "id": "993ee80c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11fe04b20>"
+       "<matplotlib.legend.Legend at 0x14a89e460>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1188,8 +1188,11 @@
    "source": [
     "#Visualization\n",
     "fig, ax = plt.subplots(figsize=(12,3))\n",
-    "ts_MS_res.plot(ax=ax, title='Precipitation for 2000 - 2010', ylabel = 'Inches',\n",
+    "ts_MS_res.plot(ax =ax, title='Precipitation for 2000 - 2010', ylabel = 'Inches',\n",
     "       xlabel = 'Years');\n",
+    "\n",
+    "#ts_MS_res.plot(ax=ax, title='Precipitation for 2000 - 2010', ylabel = 'Inches',\n",
+    "     #  xlabel = 'Years');\n",
     "\n",
     "\n",
     "##  Set xticks and xticklables\n",
@@ -1221,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "8aeb5ff5",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "9168d0a4",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1272,7 @@
        "              dtype='datetime64[ns]', name='datetime', length=7671, freq=None)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "id": "6d922040",
    "metadata": {},
    "outputs": [
@@ -1298,7 +1301,7 @@
        "Freq: A-DEC, Name: Resampled_2, dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1312,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "id": "632c5f3d",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "id": "d5d2aac6",
    "metadata": {},
    "outputs": [],
@@ -1349,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "011990df",
    "metadata": {},
    "outputs": [
